2004-01-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: Set GNUTAR_LISTED_INCREMENTAL_DIRX.
	* example/amanda.conf.in: Update record documentation.
	* man/amanda.8.in: Update record documentation.

2004-01-14  Stefan G. Weichinger <monitor@oops.co.at>

	* docs/INSTALL: Add config for xinetd.

2004-01-07  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c (handle_result): Detect bad estimate (-1).
	* server-src/planner.c (analyze_estimate): Don't schedule level
	  if the estimate is bad.

2003-12-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* docs/HOWTO-FILE-DRIVER: New file.
	* docs/TAPE.CHANGERS: Explain chg-disk.
	* docs/Makefile.am (pkgdata_DATA): add HOWTO-FILE-DRIVER.

2003-12-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* docs/SYSTEM.NOTES: Add a note about sendsize coredump on AIX.

2003-11-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Jean-Christian SIMONETTI <simonetti@echo.fr>

	* changer-src/chg-disk.sh.in: New changer script.
	* changer-src/Makefile.am (libexec_SCRIPTS): Add chg-disk.
	* configure.in (AC_CONFIG_FILES): Add changer-src/chg-disk.sh.

2003-11-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapetype.c: extern int optind.
	* tape-src/tapeio.c: extern int optind.

2003-11-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by C.Scheeder <christoph.scheeder@scheeder.de>

	* changer-src/sense.c (SenseType): Add "DAT AutoChanger" and "C1537A".

2003-11-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driver.c: Print the tape size.
	* server-src/amstatus.pl.in: print % of tape use.

2003-11-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.c (copy_dumptype): Copy in/exclude only if seen.

2003-11-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/reporter.c (output_tapeinfo): Fix printing of new tape.

2003-11-25  Jean-Louis Martineau <martineau@iro.umontreal.ca>
