@@ -1,3 +1,7 @@
+2004-01-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
+	* restore-src/amidxtaped.c (scan_init): Remove the log file if it exit.
+
 2004-01-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
 	* configure.in: Set GNUTAR_LISTED_INCREMENTAL_DIRX.
